--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hola mundo (este el Lucho, estableciendo contacto)</h1>
-				<p>Lo mío no es fácil: <em>Una vida con enfasis<a href="/about">. Aquí yace la verdad...</a></p>
+			<p>Lo mío no es fácil: <em>Una vida con enfasis</em><a href="/about">. Aquí yace la verdad...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
